# TaskCpp

./: CMakeLists.txt  README.md  main.cpp
src/: taskcpp
src/taskcpp/: parallel_for_each.h  parallel_invoke.h  parallel_reduce.h  task.h  task_group.h  when_all.h  when_any.h
src/taskcpp2/: Any.hpp  Task.hpp  TaskGroup.hpp  Variant.hpp  test.cpp
src/test/: test_parallel_for_each.cpp  test_parallel_invoke.cpp  test_parallel_reduce.cpp  test_task.cpp  test_taskgroup.cpp  test_when_all.cpp  test_when_any.cpp
